--- a/index.html
+++ b/index.html
@@ -30,21 +30,20 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Bryson Padilla</h1>
+        <h2>Senior in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a senior at Bob Jones University studying business administration. 
+            I work for Publix Supermarket in the deli department.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I go to Summit Upstate Church in Simpsonville SC. 
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to music and podcacts, reading fantasy novels, and playing D&D and other similar games.
+            I hope to one day write and publish my own novel. 
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Business Administration<br />
         Bob Jones University
     </div>
            
